--- a/client/src/style/Teacher.module.css
+++ b/client/src/style/Teacher.module.css
@@ -180,7 +180,15 @@
     touch-action: manipulation;
   }
   
-  .button_1:hover,
-  .button_1:focus {
-    background-color: #F082AC;
-  }
+.button_1:hover,
+.button_1:focus {
+  background-color: #F082AC;
+}
+.button {
+  padding: 8px 16px;
+  background-color: #1E90FF;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
