--- a/client/src/style/Login.module.css
+++ b/client/src/style/Login.module.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Mitr&display=swap');
 body {
     margin: 0;
     padding: 0;
@@ -7,7 +7,9 @@ body {
     align-items: center;
     height: 100vh;
     background: linear-gradient(to bottom, #87CEFA, #1E90FF);
-    font-family: Arial, sans-serif;
+    font-family: "Mitr", serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .sun {
@@ -130,6 +132,8 @@ body {
     border-radius: 15px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     text-align: center;
+    z-index: 1; 
+
 }
 
 .content h2 {
@@ -204,4 +208,12 @@ body {
     font-size: 14px; /* ปรับขนาดตัวอักษร */
     padding: 10px;   /* ลดระยะห่าง */
   }
-  
+.imgBackground {
+width: 100%;
+height: 100vh; /* ปรับให้ภาพมีความสูงเต็มหน้าจอ */
+position: absolute;
+top: 0;
+left: 0;
+z-index: 1; /* ให้ภาพอยู่ด้านหลังเนื้อหาทั้งหมด */
+object-fit: cover; /* ป้องกันการบิดเบือนของภาพ */
+}
